<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global strings -->
    <!-- Theme -->
    <string name="font_family_display_4_material">sans-serif-light</string>
    <string name="font_family_display_3_material">sans-serif</string>
    <string name="font_family_display_2_material">sans-serif</string>
    <string name="font_family_display_1_material">sans-serif</string>
    <string name="font_family_headline_material">sans-serif</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="font_family_subhead_material">sans-serif</string>
    <string name="font_family_menu_material">sans-serif</string>
    <string name="font_family_body_2_material">sans-serif-medium</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="font_family_caption_material">sans-serif</string>
    <string name="font_family_button_material">sans-serif-medium</string>

    <string name="app_name">Labs CUU</string>
    <string name="action_settings">Preferencias</string>
    <string name="menu_account">Cuenta</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_logout">Logout</string>

    <!-- Actions -->
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_edit">Editar</string>
    <string name="action_change">Cambiar</string>
    <string name="action_create">Crear</string>
    <string name="action_delete">Eliminar</string>

    <!-- Events -->
    <string name="event_error_network">Error, revisa tu conexión a internet.</string>
    <string name="event_password_changed">Password cambiado, vuelve a iniciar sesión</string>

    <string name="app_title_login">Laboratorios</string>
    <string name="app_campus_name">Campus Chihuahua</string>

    <string name="backstack_categories_fragment">categoriesFragment</string>

    <!-- Notifications -->
    <string name="notification_cart_ready_title">Pedido Listo!</string>
    <string name="notification_cart_ready_body">Tu pedido está listo, dirígete al laboratorio con tu credencial para recogerlo.</string>
    <string name="notification_intent_action">FROM_NOTIFICATION</string>

    <!-- Global Flow -->
    <!-- Login Activity -->
    <string name="login_mat">Matrícula</string>
    <string name="login_pass">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_dialog_title">Por favor, espera…</string>
    <string name="login_dialog_content">Te estamos registrando…</string>
    <string name="login_snackbar_error_content">Matrícula o Password inválido.</string>
    <string name="remember_me">Remember me</string>
    <string name="login_new_account">No tienes una cuenta? <b>REGISTRATE</b></string>

    <!-- Register Activity -->
    <string name="activity_signup_title">Crear cuenta</string>
    <string name="signup_name">Nombre(s)</string>
    <string name="signup_user_id">Matrícula</string>
    <string name="signup_career">Carrera</string>
    <string name="signup_last_name_1">Apellido Paterno</string>
    <string name="signup_last_name_2">Apellido Materno</string>
    <string name="signup_uid">Credencial: %1$s</string>
    <string name="signup_allowed_labs">Laboratorios Autorizados:</string>
    <string name="signup_password">Password</string>
    <string name="signup_create">Crear</string>
    <string name="signup_update">Actualizar</string>

    <!-- Labs Activity -->
    <string name="title_activity_laboratorios">LaboratoriosActivity</string>
    <string name="labs_title">Laboratorios</string>
    <string name="labs_dialog_title">Por favor, espere…</string>
    <string name="labs_dialog_content">Estamos obteniendo tus laboratorios…</string>
    <string name="labs_snackbar_error_content">No pudimos obtener datos, revisa tu conexión a internet.</string>

    <!-- Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="main_dialog_title_init">Por favor, espere…</string>
    <string name="main_dialog_content_init">Estamos obteniendo los datos del laboratorio…</string>

    <!-- Account Activity-->
    <string name="activity_account_title">Cuenta</string>
    <string name="account_preferences">Preferencias</string>
    <string name="account_full_name"><b>Nombre</b>\n%1$s %2$s %3$s</string>
    <string name="account_user_id"><b>Matrícula</b>\n%1$s</string>
    <string name="account_career"><b>Carrera</b>\n%1$s</string>
    <string name="account_mail"><b>Mail</b>\n%1$s</string>
    <string name="account_about">Acerca de</string>
    <string name="account_change_password">Cambiar Password</string>

    <!-- Reset Password Dialog Fragment -->
    <string name="reset_password_title">Cambiar Password</string>
    <string name="reset_password_old">Password Actual</string>
    <string name="reset_password_new">Nuevo Password</string>
    <string name="reset_password_new_verify">Confirmar Nuevo Password</string>

    <!-- Admin Flow -->
    <!-- Requests Fragment -->
    <string name="request_item_list_item_quantity">Total: %s</string>
    <string name="request_item_error_get_list">Error obteniendo la información.</string>
    <string name="request_item_ready_cart_success">Carrito listo.</string>
    <string name="request_item_validate_success">Validación exitosa.</string>
    <string name="request_item_validate_error">Error al validar.</string>
    <string name="request_item_delete_dialog_title">Por favor espere…</string>
    <string name="request_item_delete_dialog_body">Eliminando carrito…</string>
    <!-- Inventory Fragment -->
    <string name="component_list_item_available">Disponible: %d</string>
    <!-- Users Fragment -->
    <string name="user_list_item_extra">%1$s\t\t%2$s</string>
    <string name="user_list_item_history_name_note_qty">%1$s %2$s\t\tCantidad: %3$d</string>
    <string name="user_list_item_history_date_out_in">Pedido: %1$s\nEntregado: %2$s</string>
    <!-- Reports Fragment -->
    <!-- Pager Adapter -->
    <string name="page_title_requests">Pedidos</string>
    <string name="page_title_inventory">Inventario</string>
    <string name="page_title_users">Usuarios</string>
    <string name="page_title_reports">Reportes</string>


    <!-- User Flow -->
    <!-- Pager Adapter-->
    <string name="page_title_categories">Categorías</string>
    <string name="page_title_cart">Carrito</string>
    <string name="page_title_history">Historial</string>

    <!-- Categories Fragment -->
    <!-- Grid-->
    <string name="categories_grid_snackbar_error_content">Error obteniendo las categorias.</string>
    <!-- Details -->
    <string name="categories_detail_snackbar_error_content">Error obteniendo los componentes.</string>
    <string name="page_title_categories_detail">Detalles</string>
    <string name="component_list_item_in_cart">En Carrito: %d</string>

    <!-- Cart Fragment-->
    <string name="cart_empty_list">Lista vacía\n:(</string>
    <string name="cart_snackbar_error_content">Error obteniendo el carrito.</string>
    <string name="cart_snackbar_post_success_content">Carrito añadido.</string>
    <string name="cart_snackbar_post_error_content">Error añadiendo carrito, revisa tu conexión de internet.</string>
    <string name="cart_header_api">Ya pedidos</string>
    <string name="cart_header_local">Por pedir</string>
    <string name="cart_qty_in_cart">Cantidad: %1$d</string>

    <!-- Record Fragment -->
    <string name="record_snackbar_error_content">Error obteniendo carrito.</string>
    <string name="record_snackbar_post_success_content">Carrito añadido.</string>
    <string name="record_snackbar_post_error_content">Error añadiendo carrito, prueba otra vez.</string>
    <string name="record_name_note_quantity">%1$s %2$s\t\t<b>Cantidad:</b> %3$s</string>
    <string name="record_dates"><b>Recogido:</b> %1$s\n<b>Entregado:</b> %2$s</string>

    <!-- Add Category Dialog -->
    <string name="add_category_title">Agregar Categoría</string>
    <string name="add_category_name">Nombre de la Categoría</string>

    <!-- Edit Cateogry Dialog -->
    <string name="edit_category_title">Editar Categoría</string>
    <string name="edit_category_name">Nombre de la Categoría</string>

    <!-- Add Component Dialog -->
    <string name="add_component_title">Agregar Componente</string>
    <string name="add_component_name">Nombre del Componente</string>
    <string name="add_component_note">Notas</string>
    <string name="add_component_total">Total de Componentes</string>
    <string name="add_component_available">Componentes Disponibles</string>

    <!-- Edit Component Dialog -->
    <string name="edit_component_title">Editar Componente</string>
    <string name="edit_component_name">Nombre del Componente</string>
    <string name="edit_component_note">Notas</string>
    <string name="edit_component_total">Total de Componentes</string>
    <string name="edit_component_available">Componentes Disponibles</string>

    <!-- Add User Dialog -->
    <string name="dialog_create_user_title">Crear Usuario</string>

</resources>
