<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/primary"
        app:title="@string/activity_account_title"
        app:titleTextColor="@color/primary_text_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/LabsTheme.Compat.Text.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_about"
            android:textColor="@color/primary_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark" />

    </LinearLayout>

    <TextView
        android:id="@+id/account_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:text="@string/account_full_name" />

    <TextView
        android:id="@+id/account_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:text="@string/account_user_id" />

    <TextView
        android:id="@+id/account_career"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        tools:text="@string/account_career" />

    <TextView
        android:id="@+id/account_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        tools:text="@string/account_mail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/LabsTheme.Compat.Text.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_preferences"
            android:textColor="@color/primary_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark" />

    </LinearLayout>

    <TextView
        android:id="@+id/account_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/account_change_password"
        android:textStyle="bold" />

</LinearLayout>
