<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_component_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_component_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_component_name"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_component_note_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_component_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_component_note"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_component_total_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_component_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_component_total"
            android:inputType="numberDecimal"
            android:lines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_component_available_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_component_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_component_available"
            android:inputType="numberDecimal"
            android:lines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_component_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textColor="@color/material_red" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_component_done"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_create"
            android:textColor="@color/primary" />

    </LinearLayout>

</LinearLayout>