<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_user_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_image"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_mat"
        app:floatingLabel="normal"
        app:floatingLabelText="Matrícula"
        app:primaryColor="#000000"
        app:baseColor="#000000"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_user_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_id"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        app:floatingLabel="normal"
        app:floatingLabelText="Password"
        app:primaryColor="#000000"
        app:baseColor="#000000"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_pass"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button"
        style="@style/LabsTheme.v21.Text.Body1"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/login_signup"
        style="@style/LabsTheme.v21.Text.Body1"/>

</RelativeLayout>
